syntax = "proto3";
import "commontype/TopicMessage.proto";
import "inboxservice/TopicFilterOption.proto";

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.inbox.storage.proto";
option java_outer_classname = "InboxMessageProtos";

package inboxservice;

message InboxMessage{
  uint64 seq = 1;
  string topicFilter = 2;
  commontype.TopicMessage msg = 3;
  TopicFilterOption option = 4;
}

message InboxMessageList{
  repeated InboxMessage message = 1;
}